# cmsc508

./: README.md
cmsc508-fa2023-hw2-a-welk/: README.md  README.qmd
cmsc508-fa2023-hw2-a-welk/demo/: er-model-example.html  er-model-example.qmd
cmsc508-fa2023-hw2-a-welk/hw2/: README.md  README.qmd  sample.md  sample.qmd
cmsc508-fa2023-hw3-a-welk/: README.md
cmsc508-fa2023-hw3-a-welk/hw3/: README.md  hw3.html  hw3.qmd
cmsc508-fa2023-hw4-a-welk/: README.md
cmsc508-fa2023-hw4-a-welk/hw4/: hw4.html  hw4.qmd
cmsc508-fa2023-hw5-a-welk/: README.md
cmsc508-fa2023-hw5-a-welk/hw5/: hw5.html  hw5.qmd
cmsc508-fa2023-hw6-a-welk/: README.md  pyproject.toml
cmsc508-fa2023-hw6-a-welk/hw6/: explore.html  explore.qmd  hw6.html  hw6.qmd
cmsc508-fa2023-hw7-a-welk/: README.md  pyproject.toml
cmsc508-fa2023-hw7-a-welk/hw7/: hw7-ddl.sql  hw7.html  hw7.qmd
cmsc508-fa2023-hw8-a-welk/hw8/: hw8.qmd
cmsc508-fa2023-hw9-a-welk/: README.md  pyproject.toml
cmsc508-fa2023-hw9-a-welk/hw9/: hw9-old.html  hw9-old.qmd  hw9.html  hw9.qmd
cmsc508-fa2023-hw9-a-welk/source-data/: Makefile  loader.html  loader.qmd
hw8/: hw8.ipynb  hw8.qmd  styles.css
