[tool.poetry]
name = "cmsc508-hw9"
version = "0.1.0"
description = "In this assignment we were with some advanced queries to retrieve data from the World Development Index"
authors = ["Alex Welk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
markdown = "^3.5.1"
panda = "^0.3.1"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
mysql-connector-python = "^8.2.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
